# DisplaxSDK_CMAKE_QT6

./: CMakeLists.txt  DisplaxSDK.pro  license.txt  readme.md
ActiveTags/: ActiveTags.pro  CMakeLists.txt  main.cpp  main.qml  qml.qrc  readme.md  scene.qml
BasicPrintDeviceInfo/: BasicPrintDeviceInfo.pro  CMakeLists.txt  main.cpp  main.h  readme.md
DeviceFrameTouch/: CMakeLists.txt  DeviceFrameTouch.pro  DeviceView.qml  frameviewer.cpp  frameviewer.h  main.cpp  main.qml  qml.qrc  readme.md
DeviceLoadSaveSettings/: CMakeLists.txt  DeviceLoadSaveSettings.pro  devicesettings.cpp  devicesettings.h  main.cpp  readme.md
DeviceReset/: CMakeLists.txt  DeviceReset.pro  devicereset.cpp  devicereset.h  main.cpp  readme.md
NetworkDeviceInfo/: CMakeLists.txt  ComputerIcon.qml  NetworkDeviceInfo.pro  SensorIcon.qml  main.cpp  main.qml  qml.qrc  readme.md
NetworkDeviceInfoExtended/: CMakeLists.txt  ComputerIcon.qml  DeviceIcon.qml  DeviceWindow.qml  EntityView_Enum.qml  EntityView_String.qml  EntityView_bool.qml  EntityView_float.qml  EntityView_int.qml  main.qml  qml.qrc  readme.md
client-lib/: CMakeLists.txt  client-lib.pro  displaxclientlib_global.h  dpxclientlib.cpp  dpxclientlib.h  readme.md
client-lib/base/: action.cpp  action.h  device.cpp  device.h  entity.cpp  entity.h  entitybool.cpp  entitybool.h  entitycontext.cpp  entitycontext.h  entityenum.cpp  entityenum.h  entityfloat.cpp  entityfloat.h  entityframe.cpp  entityframe.h  entityfunction.cpp  entityfunction.h  entityint.cpp  entityint.h  entityjsonvalue.cpp  entityjsonvalue.h  entitysettings.cpp  entitysettings.h  entitystring.cpp  entitystring.h  entitytouchevents.cpp  entitytouchevents.h  session.cpp  session.h  sessionmanager.cpp  sessionmanager.h
client-lib/communication/: dpxcomconnection.cpp  dpxcomconnection.h  dpxcommanager.cpp  dpxcommanager.h  dpxcompeermanager.cpp  dpxcompeermanager.h  dpxcomurl.cpp  dpxcomurl.h
